# CropGuiNeu

./: .cspell.json  .gitignore  .pre-commit-config.yaml  FAQ.adoc  Makefile  README.adoc  generated-poetry-sources.json  io.github.lwbt.CropGuiNeu.metainfo.xml  io.github.lwbt.CropGuiNeu.yaml  io.github.lwbt.CropGuiNeu.yml  pyproject.toml  python3-requirements.json  requirements.txt  setup.py
assets/: Big_buck_bunny_poster_big.LICENSE.txt  crop-gui-neu.desktop  cropgui_install.sh  project-words.txt
crop_gui_neu/: gui.py
data/: setup.py-disabled
src/crop_gui_neu/: gui.py  jpeg_info.py  jpeg_quality.py
